namespaces/live.cloud-platform.service.justice.gov.uk/laa-assess-non-standard-magistrate-fee-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-assess-non-standard-magistrate-fee-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-crm-4-5-7"
    cloud-platform.justice.gov.uk/application: "Assess a non-standard magnistrates' court claim"
    cloud-platform.justice.gov.uk/owner: "ministryofjustice: CRM457@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-assess-non-standard-magistrate-fee"
    cloud-platform.justice.gov.uk/team-name: "ministryofjustice"
    cloud-platform.justice.gov.uk/review-after: ""
